--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,14 @@
 <resources>
     <string name="app_name">Memoir</string>
+    <string name="login_id_hint">Email</string>
+    <string name="activity_login_password_hint">Password</string>
+    <string name="activity_login_button">LogIn</string>
+
+
+
+    <string name="activity_register_password_value_hint">Password</string>
+    <string name="activity_register_confirm_password_value_hint">Confirm Password</string>
+    <string name="activity_register_last_name_vale_hint">Last Name</string>
+    <string name="activity_register_first_name_value_hint">First Name</string>
+
 </resources>
